--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,64 @@
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==21.2.0
+3-1==1.0.0
+appdirs==1.4.4
+asgiref==3.4.1
+astroid==2.5.2
 backcall==0.2.0
-bleach==4.0.0
-cffi==1.14.6
+click==8.0.1
 colorama==0.4.4
-cycler==0.10.0
 debugpy==1.4.1
 decorator==5.0.9
-defusedxml==0.7.1
+distlib==0.3.2
+Django==3.2.6
 entrypoints==0.3
-ipykernel==6.1.0
-ipython==7.26.0
+filelock==3.0.12
+ipykernel==6.3.1
+ipython==7.27.0
 ipython-genutils==0.2.0
-ipywidgets==7.6.3
+isort==5.8.0
 jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
+jupyter-client==7.0.2
 jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.1
-MarkupSafe==2.0.1
-matplotlib==3.4.2
+lazy-object-proxy==1.6.0
 matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclient==0.5.3
-nbconvert==6.1.0
-nbformat==5.1.3
+mccabe==0.6.1
+MouseInfo==0.1.3
 nest-asyncio==1.5.1
-notebook==6.4.3
-numpy==1.21.1
-packaging==21.0
-pandas==1.3.1
-pandocfilters==1.4.3
+numpy==1.20.2
+pandas==1.2.4
 parso==0.8.2
 pickleshare==0.7.5
-Pillow==8.3.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.19
-pycparser==2.20
-Pygments==2.9.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
+prompt-toolkit==3.0.20
+PyAutoGUI==0.9.52
+pygame==2.0.1
+PyGetWindow==0.0.9
+Pygments==2.10.0
+pylint==2.7.4
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.2
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.8.1
+pyqt5-tools==5.15.4.3.2
+PyQt5Designer==5.14.1
+PyRect==0.1.4
+PyScreeze==0.1.27
+python-dateutil==2.8.1
+python-dotenv==0.19.0
+pytube==10.8.3
+PyTweening==1.0.3
 pytz==2021.1
 pywin32==301
-pywinpty==1.1.3
 pyzmq==22.2.1
-qtconsole==5.1.1
-QtPy==1.9.0
-Send2Trash==1.8.0
+qt5-applications==5.15.2.2.2
+qt5-tools==5.15.2.1.2
+selenium==3.141.0
 six==1.16.0
-terminado==0.11.0
-testpath==0.5.0
+sqlparse==0.4.1
+toml==0.10.2
 tornado==6.1
-traitlets==5.0.5
+traitlets==5.1.0
+urllib3==1.26.5
+virtualenv==20.4.7
 wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
+wrapt==1.12.1
